--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,13 +1,33 @@
 @(dateTimes: List[(String, String)])
 
 @main("Football Time Machine") {
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Football Time Machine</h1>
 
-    <h1>Football Time Machine</h1>
+                <p>The <span class="label label-success">Football Time Machine!</span> allows you to simulate time travel by replaying old PA data.</p>
 
-    <p>The following date/time combinations are eligible for time travel:</p>
-    <p class="small">Note, historical data may work for you if the API calls you are making weren't recorded at the time.</p>
+                <h2>Usage</h2>
 
-    @for((date, time) <- dateTimes) {
-      <li>@date/@time</li>
-    }
+                <p>
+                    You can use the <span class="label label-success">Football Time Machine!</span> by changing the URL you use to access the PA API.
+                    Instead of (e.g.) <a href="http://pads6.pa-sport.com/">http://pads6.pa-sport.com/</a> you
+                    should point to the <span class="label label-success">Football Time Machine!</span>, including
+                    the date and time you wish to travel to. For example if you set <code>--time machine domain--/20140225/1550/</code>
+                    you will recieve data as if it is 15:50 on the 25th of Feb 2014.
+                </p>
+
+                <p>
+                    You'll need to choose a time and date for which there exists saved data.
+                    The following date/time combinations are eligible for time travel
+                </p>
+                <p class="small">Note, historical data may not work for you if the API calls you are making weren't recorded at the time.</p>
+
+                @for((date, time) <- dateTimes) {
+                  <li>@date/@time</li>
+                }
+            </div>
+        </div>
+    </div>
 }
