--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(dateTimes: List[(String, String)])
+@(dateTimeGroups: List[(String, List[(String, String)])])(implicit request: RequestHeader)
 
 @main("Football Time Machine") {
     <div class="container">
@@ -14,19 +14,28 @@
                     You can use the <span class="label label-success">Football Time Machine!</span> by changing the URL you use to access the PA API.
                     Instead of (e.g.) <a href="http://pads6.pa-sport.com/">http://pads6.pa-sport.com/</a> you
                     should point to the <span class="label label-success">Football Time Machine!</span>, including
-                    the date and time you wish to travel to. For example if you set <code>--time machine domain--/20140225/1550/</code>
-                    you will recieve data as if it is 15:50 on the 25th of Feb 2014.
+                    the date and time you wish to travel to. For example if you set <code>http://@request.host/20140225/1550</code>
+                    you will receive data as if it is 15:50 on the 25th of Feb 2014.
                 </p>
 
                 <p>
                     You'll need to choose a time and date for which there exists saved data.
-                    The following date/time combinations are eligible for time travel
+                    The following date/time combinations are eligible for time travel:
                 </p>
                 <p class="small">Note, historical data may not work for you if the API calls you are making weren't recorded at the time.</p>
 
-                @for((date, time) <- dateTimes) {
-                  <li>@date/@time</li>
+                <ul class="list-unstyled datelist">
+                @for((date, dateTimes) <- dateTimeGroups) {
+                  <li class="datelist-item">
+                      <span class="btn btn-default" data-toggle="collapse" data-target="#datetime-@date">@date.take(4) / @date.drop(4).take(2) / @date.drop(6)</span>
+                      <ul class="datetime-group collapse" id="datetime-@date">
+                      @for((_, time) <- dateTimes) {
+                          <li><code>http://@request.host/@date/@time</code></li>
+                      }
+                      </ul>
+                  </li>
                 }
+                </ul>
             </div>
         </div>
     </div>
