Improve instructions for README

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,7 @@
             <div class="col-md-12">
                 <h1>Football Time Machine</h1>
 
-                <p>The <span class="label label-success">Football Time Machine!</span> allows you to simulate time travel by replaying old PA data.</p>
+                <p>The <span class="label label-success">Football Time Machine!</span> allows you to simulate time travel by replaying old PA responses.</p>
 
                 <h2>Usage</h2>
 
